# deutex

./: .gitignore  .travis.yml  AUTHORS  CHANGES  COPYING.LIB  FAQ  INSTALL  LICENCE  LICENSE  Makefile  Makefile.am  Makefile.in  NEWS.adoc  README  README.adoc  TODO  VERSION  configure  configure.ac  deusf.6  deutex.6  dtexman6.txt
docsrc/: README  changes.html  deutex.6  faq.html  hackers_guide.html  readme.dos  todo.html
dos/: buildbc.bat  builddj.bat  buildmsc.bat
man/: .gitignore  Makefile.am  deutex.txt.in
old/: deusf.ide  deutex.ide  dos2unix.sh  readme.txt  save.bat
pkg.w32/: .gitignore  GNUmakefile  Makefile  config.make.in  cp-with-libs
scripts/: codes  html2txt  process
src/: .gitignore  Makefile.am  color.c  color.h  compose.c  deusf.def  deusfos.def  deutex.c  deutex.def  deutex.h  deutexos.def  endianio.c  endianio.h  endianm.c  endianm.h  extract.c  extract.h  gifcodec.c  gifcodec.h  ident.c  ident.h  listdir.c  lists.c  lists.h  log.c  log.h  lzw.c  merge.c  merge.h  mkwad.c  mkwad.h  picture.c  picture.h  png_tools.c  png_tools.h  sound.c  sound.h  sscript.c  sscript.h  substit.c  (+11 more)
