bin_PROGRAMS = deutex
deutex_SOURCES = color.c deutex.h endianm.h gifcodec.h lists.c lzw.c	\
mkwad.h sound.h text.h tools.h wadio.c color.h endianio.c extract.c	\
ident.c lists.h merge.c picture.c sscript.c texture.c usedidx.c		\
wadio.h compose.c endianio.h extract.h ident.h log.c merge.h		\
picture.h sscript.h texture.h usedidx.h deutex.c endianm.c gifcodec.c	\
listdir.c log.h mkwad.c sound.c text.c tools.c version.c
