bin_PROGRAMS = deutex
deutex_SOURCES = color.c color.h compose.c deutex.c deutex.h		\
endianio.c endianio.h endianm.c endianm.h extract.c extract.h ident.c	\
ident.h listdir.c lists.c lists.h lzw.c merge.c merge.h mkwad.c		\
mkwad.h picture.c picture.h sound.c sound.h sscript.c sscript.h		\
text.c text.h texture.c texture.h tools.c tools.h usedidx.c usedidx.h	\
wadio.c wadio.h

AM_CFLAGS=@PNG_CFLAGS@
AM_LDFLAGS=@PNG_LIBS@
